--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Homepage | Jack Bevan</title>
-     <link rel="stylesheet" href="./resources/css/index.css"><link>
+     <link rel="stylesheet" href="./resources/css/index.css">
     </head>
 
     <body>
